--- a/task02/index.html
+++ b/task02/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-
+        <h1>Welcome to CodingPedia!</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Index</a></li>
@@ -39,7 +39,7 @@
 
     <footer>
         <address>
-            AZOULA - Arthur - 20 rue caventou - 0778794962
+            AZOULA - Arthur - 20 rue caventou, Lille - 0778794962
         </address>
     </footer>
 </body>
